package handlers

import (
	"fmt"
	"net/http"
	"time"

	"github.com/gin-gonic/gin"
	"github.com/google/uuid"
	"github.com/tafolabi009/backend/go_backend/internal/models"
)

// InitiateUpload starts a dataset upload and returns signed URL
func InitiateUpload(c *gin.Context) {
	userID := c.GetString("user_id")

	var req models.InitiateUploadRequest
	if err := c.ShouldBindJSON(&req); err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": gin.H{
				"code":    "INVALID_REQUEST",
				"message": err.Error(),
			},
		})
		return
	}

	// Generate dataset ID
	datasetID := "ds_" + uuid.New().String()[:8]

	// TODO: Generate S3 signed URL
	// For now, returning mock URL
	uploadURL := fmt.Sprintf("https://s3.amazonaws.com/synthos-uploads/%s/%s", userID, datasetID)

	// TODO: Save dataset metadata to database
	// dataset := models.Dataset{
	// 	ID:       datasetID,
	// 	UserID:   userID,
	// 	Filename: req.Filename,
	// 	FileSize: req.FileSize,
	// 	FileType: req.FileType,
	// 	Status:   "uploading",
	// 	S3Path:   uploadURL,
	// }

	response := models.InitiateUploadResponse{
		DatasetID:    datasetID,
		UploadURL:    uploadURL,
		UploadMethod: "multipart",
		ChunkSize:    10485760, // 10MB
		ExpiresIn:    3600,     // 1 hour
	}

	c.JSON(http.StatusOK, response)
}

// CompleteUpload marks an upload as complete and triggers processing
func CompleteUpload(c *gin.Context) {
	datasetID := c.Param("id")
	userID := c.GetString("user_id")

	var req models.CompleteUploadRequest
	if err := c.ShouldBindJSON(&req); err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": gin.H{
				"code":    "INVALID_REQUEST",
				"message": err.Error(),
			},
		})
		return
	}

	// TODO: Verify dataset belongs to user
	// TODO: Update dataset status to "processing"
	// TODO: Trigger processing job via gRPC

	_ = userID // Use userID to prevent unused variable error

	response := models.CompleteUploadResponse{
		DatasetID:           datasetID,
		Status:              "processing",
		EstimatedCompletion: time.Now().Add(30 * time.Minute),
		ProcessingStages: []models.ProcessingStage{
			{Stage: "ingestion", Status: "in_progress", Progress: 0},
			{Stage: "profiling", Status: "pending", Progress: 0},
		},
	}

	c.JSON(http.StatusOK, response)
}

// ListDatasets returns paginated list of datasets
func ListDatasets(c *gin.Context) {
	userID := c.GetString("user_id")

	// TODO: Query parameters for pagination, filtering, sorting
	// page := c.DefaultQuery("page", "1")
	// pageSize := c.DefaultQuery("page_size", "20")
	// status := c.Query("status")

	// TODO: Fetch datasets from database
	_ = userID

	// Mock response
	datasets := []models.Dataset{
		{
			ID:          "ds_def456",
			UserID:      userID,
			Filename:    "training_data.csv",
			FileSize:    52428800,
			Status:      "processed",
			RowCount:    func() *int64 { v := int64(500000000); return &v }(),
			ColumnCount: func() *int { v := 50; return &v }(),
			UploadedAt:  time.Now().Add(-24 * time.Hour),
			ProcessedAt: func() *time.Time { t := time.Now().Add(-23 * time.Hour); return &t }(),
		},
	}

	response := models.DatasetListResponse{
		Datasets: datasets,
		Pagination: models.Pagination{
			Page:       1,
			PageSize:   20,
			TotalCount: 1,
			TotalPages: 1,
		},
	}

	c.JSON(http.StatusOK, response)
}

// GetDataset returns details for a specific dataset
func GetDataset(c *gin.Context) {
	datasetID := c.Param("id")
	userID := c.GetString("user_id")

	// TODO: Fetch from database and verify ownership
	_ = userID

	// Mock response
	dataset := models.Dataset{
		ID:          datasetID,
		UserID:      userID,
		Filename:    "training_data.csv",
		FileSize:    52428800,
		Status:      "processed",
		RowCount:    func() *int64 { v := int64(500000000); return &v }(),
		ColumnCount: func() *int { v := 50; return &v }(),
		UploadedAt:  time.Now().Add(-24 * time.Hour),
		ProcessedAt: func() *time.Time { t := time.Now().Add(-23 * time.Hour); return &t }(),
	}

	c.JSON(http.StatusOK, dataset)
}

// DeleteDataset removes a dataset
func DeleteDataset(c *gin.Context) {
	datasetID := c.Param("id")
	userID := c.GetString("user_id")

	// TODO: Verify ownership
	// TODO: Delete from S3
	// TODO: Delete from database
	_ = userID

	c.JSON(http.StatusOK, gin.H{
		"dataset_id": datasetID,
		"status":     "deleted",
		"deleted_at": time.Now().UTC().Format(time.RFC3339),
	})
}
